# epub-translator

./: .gitignore  README.md  README_zh-CN.md  format.template.json  main.py  pyproject.toml  test.py
.github/workflows/: build.yml
docs/changelog/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
docs/reports/: 2026-01-07-fill-prompt-evolution-guide.md  2026-01-07-fill-stage-optimization-experiments.md
epub_translator/: __init__.py  file.py  peakable.py  peekable.py  template.py  translator.py  utils.py  xml_interrupter.py  zip_context.py
epub_translator/data/: fill.jinja  format.jinja  translate.jinja
epub_translator/epub/: __init__.py  chapter.py  common.py  content_parser.py  metadata.py  placeholder.py  spines.py  toc.py  zip.py
epub_translator/epub2/: content_parser.py
epub_translator/fill/: filler.py  format.py
epub_translator/format/: inline_segment.py  nest.py  text_segment.py
scripts/: check_duplicate_ids.py  test_fill_cases.py  test_hill_climbing.py  translate.py  translate_challenge.py  translate_epub.py  translate_texts.py  translate_xml.py  utils.py
tests/: test_epub_transcode.py  test_fill_integration.py  test_group.py  test_inline_segment.py  test_math.py  test_metadata.py  test_score.py  test_self_closing.py  test_serial.py  test_spines.py  test_stream_mapper.py  test_submitter.py  test_text_picker.py  test_text_segment.py  test_toc.py  test_xml_format.py  test_xml_friendly.py  test_xml_interrupter.py  test_xml_like.py  test_xml_truncatable.py  utils.py
(+96 files in other folders)
