[project]
name = "epub-translator"
version = "0.0.1"
description = ""
authors = [
    {name = "Tao Zeyu",email = "i@taozeyu.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langid (>=1.1.6,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "resource-segmentation (==0.0.1)",
    "langchain (==0.3.23)",
    "langchain-openai (==0.3.13)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
